<resources>
    <string name="app_name">SoapCal</string>
    <string name="developed_by">Developed by InterestingOnes</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="create_recipes">Create recipes</string>
    <string name="create_by_weight">Create by weight</string>
    <string name="create_by_percentage">Create by percentage</string>
    <string name="create_soapmaking_recipes_by_weight">Create soapmaking recipes by weight</string>
    <string name="create_soapmaking_recipes_by_percentage">Create soapmaking recipes by percentage</string>
    <string name="oil_properties">Oil properties</string>

    <string name="feed_back">Feedback</string>
    <string name="feedback_for_SoapCal">Feedback for "SoapCal"</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>

    <string name="share_app">Share App</string>

    <string name="privacy">Privacy policy</string>
    <string name="other_apps_from_developer">Other apps from developer</string>
    <string name="list_everything">ListEverything</string>
    <string name="e_writer">Fifi\'s eWriter</string>
    <string name="about">About</string>
    <string name="version">Version:</string>
    <string name="more_functions">Hello users,\n\nIn V3.2,\n- Oil sap value has been added to recipes.\n- \"Coconut oil, fractionated\" and \"palm olein\" are added to the oils list.\n\nThanks to the people who left reviews, I will continually update the app and add more features.\n\nIf you have any suggestions, please send me an email by using the \"Feedback\" option in the main menu on left side.\n\nIf you like this app, please give it a review at Google Play Store, thanks for using SoapCal :-)\n\nInterestingOnes</string>

    <string name="display_single_recipe_banner_ad_unit_id">ca-app-pub-9005389628695120/6632641292</string>
    <string name="edit_single_recipe_banner_ad_unit_id">ca-app-pub-9005389628695120/2338463007</string>
    <string name="by_weight_banner_ad_unit_id">ca-app-pub-9005389628695120/1897178491</string>
    <string name="by_percentage_banner_ad_unit_id">ca-app-pub-9005389628695120/3373911694</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-9005389628695120/4850644891</string>
    <string name="oil_properties_banner_ad_unit_id">ca-app-pub-9005389628695120/7504779694</string>

    <string name="Soap_recipe_list">Your Soap Recipe List</string>
    <string name="no_recipe_has_been_saved_yet">Recipe list is empty.</string>
    <string name="start_creating_a_recipe">Create a recipe?</string>

    <string name="choose_oil">Click to choose oil&#8230;</string>
    <string name="NaOH_discount">NaOH discount:</string>
    <string name="NaOH_purity">NaOH purity:</string>
    <string name="NaOH_purity_help">If you don\'t know the purity of NaOH, just leave this field empty. The calculator will use 100% as the default value.\n\nIn this case, the final NaOH weight will be little less than the actual NaOH weight you need.\n\nThat means there will be some oil not getting saponified finally, which will become some extra superfatting besides the amount you enter in the superfatting field below.</string>
    <string name="star_water">Water *:</string>
    <string name="water">Water:</string>
    <string name="times_of_NaOH_weight">times of NaOH weight</string>
    <string name="superfatting">Superfatting:</string>
    <string name="of_total_oil_weight">% of total oil weight</string>
    <string name="superfatting_oil_name">Superfatting oil name</string>
    <string name="essential_oil">Essential oil:</string>
    <string name="of_total_soap_weight">% of total soap weight</string>
    <string name="essential_oil_name">Essential oil name</string>
    <string name="additive">Additive:</string>
    <string name="additive_name">Additive name</string>
    <string name="reset">Reset</string>
    <string name="unit_setting">Unit setting</string>
    <string name="Cal">Calculate</string>
    <string name="soapmaking_supply_note">* For soapmaking supplies, please check with your local grocery stores, or online stores like Amazon.</string>
    calculating_method
    <string name="calculating_method">* Hello users, regarding the calculation methods, there are several kinds to create soap recipes, the one used in this app is from a Japanese soap maker - Kyoko Maeda who I like very much. \n\nThis method may not be your favorite one but no matter which method we use, the final recipes are same.
        If you don\'t get used to this method, please check out other soap calculator apps, thank you for using SoapCal :-)</string>
    <string name="sap_value_note">* The oil sap value used in this app may be a little bit different with the one you usually use, that\'s because the data are from different sources, but they should be very close and won\'t affect the soap much due to superfatting.</string>
    <string name="enjoy_soapmaking">Enjoy Soapmaking :-)</string>

    <string name="star_total_oil_weight">Total oil weight *: </string>
    <string name="total_oil_weight">Total oil weight: </string>

    <string name="recipe">Recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="discount">discount</string>
    <string name="total_soap_weight">Total soap weight:</string>
    <string name="date">Date:</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="rename_recipe">Rename recipe</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <string name="does_not_equal_100">The total of single oil percentage does not equal 100.</string>
    <string name="NaOH">NaOH:</string>
    <string name="please_select_oils">Please select oils.</string>
    <string name="reset_all_the_data"> Are you sure you want to reset all the data?</string>
    <string name="choose_unit">Choose unit:</string>
    <string name="you_chose">You have chosen </string>

    <string name="delete_this_recipe">Are you sure you want to delete this recipe?</string>
    <string name="recipe_was_deleted">Recipe has been deleted.</string>
    <string name="this_recipe_is_never_saved">This recipe has not been saved yet.</string>
    <string name="save_recipe">Save recipe</string>
    <string name="name_your_recipe">Name your recipe:</string>
    <string name="please_type_in_a_name">Please type in a name.</string>
    <string name="cannot_contain_symbol_dot">Recipe name cannot contain symbol dot ".".</string>
    <string name="this_name_is_already_used">This name is already used.</string>
    <string name="please_choose_another_name">Please choose another name.</string>
    <string name="recipe_was_saved_successfully">Recipe has been saved successfully.</string>
    <string name="recipe_was_not_saved">Recipe was not saved.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="new_name">New name:</string>
    <string name="recipe_name_was_changed_successfully">Recipe name has been changed successfully.</string>
    <string name="recipe_name_was_not_changed">Recipe name was not changed.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_edit_single_recipe">EditSingleRecipe</string>

</resources>
