<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_recipe"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_recipe"
        android:orderInCategory="200"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/share_recipe"
        android:orderInCategory="300"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

</menu>