<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="appinventor.ai_plumtreeinbackyard.SoapCal_Lite.DisplaySingleRecipe"
    tools:showIn="@layout/activity_display_single_recipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView_display_single_recipe"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:text="Recipe Title"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_recipe_title"
                android:layout_marginTop="6dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/recipe"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textview_sap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_recipe"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:paddingLeft="6dp"
                android:paddingTop="15dp"
                android:text="@string/sap_value_note"
                android:textAlignment="center"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_sap"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="6dp"
                android:paddingTop="6dp"
                android:text="@string/enjoy_soapmaking"
                android:textAlignment="center"
                android:textColor="@color/mainColor"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_display_single_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/display_single_recipe_banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
